--- a/WingDroid/app/src/main/res/values/strings.xml
+++ b/WingDroid/app/src/main/res/values/strings.xml
@@ -27,9 +27,13 @@
     <string name="news_events">Events about your Bookmark</string>
 
 
-    <string name="detail_issues">Issues</string>
+    <string name="detail_issues">Issue</string>
+    <string name="detail_watches">Watch</string>
     <string name="detail_github">Github</string>
     <string name="detail_simulate">Simulate</string>
+    <string name="detail_star">Star</string>
+    <string name="detail_fork">Fork</string>
+
     <string name="related_libraries">Related Libraries</string>
 
 
