Apply event bus instead of listener

--- a/WingDroid/app/src/main/res/values/strings.xml
+++ b/WingDroid/app/src/main/res/values/strings.xml
@@ -46,6 +46,7 @@
 
     <string name="filter_release">Release</string>
     <string name="filter_push">Push</string>
+    <string name="filter_all">All</string>
 
 
 
