--- a/WingDroid/app/src/main/res/values/strings.xml
+++ b/WingDroid/app/src/main/res/values/strings.xml
@@ -44,9 +44,9 @@
     <string name="empty_search_result">No result found.</string>
     <string name="empty_issue">No issue about your bookmarks.</string>
 
-    <string name="filter_release">Release</string>
-    <string name="filter_push">Push</string>
-    <string name="filter_all">All</string>
+    <string name="filter_release">RELEASE</string>
+    <string name="filter_push">PUSH</string>
+    <string name="filter_all">ALL</string>
 
 
 
