--- a/WingDroid/app/src/main/res/values/strings.xml
+++ b/WingDroid/app/src/main/res/values/strings.xml
@@ -52,6 +52,8 @@
 
     <!-- Toast message string -->
     <string name="toast_message_no_auth"></string>
+    <string name="toast_message_bookmark_added">Added</string>
+    <string name="toast_message_bookmark_deleted">Deleted</string>
 
 
 
